experiment detail is done

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
 
 body {
   display: flex;
@@ -311,4 +311,4 @@ select {
 .datepicker-done,
 .datepicker-cancel {
   color: #c8b3a5 !important;
-}
+} */
