--- a/main_app/templates/main_app/labs_list.html
+++ b/main_app/templates/main_app/labs_list.html
@@ -2,18 +2,12 @@
 {% block content %}
 <h1>All Labs</h1>
 {% for lab in labs %}
-<div class="lab-container">
-  <div class="lab-card">
-    <h3>
-      <a href="{% url 'lab_detail' lab.id %}">
-        {{ lab.name }}
-      </a>
-    </h3>
-    <p>{{ lab.description }}</p>
-    <a class="btn" href="{% url 'lab_detail' lab.id %}">
-      Show All Experiments
-    </a>
+  <div class="lab-container">
+    <h3>{{ lab.name }}</h3>
+    <div class="lab-card">
+      <p>{{ lab.description }}</p>
+      <a href="{% url 'lab_detail' lab.id %}">Show All Experiments</a>
+    </div>
   </div>
-</div>
-{% endfor %}
+  {% endfor %}
 {% endblock %}
