--- a/main_app/templates/main_app/base.html
+++ b/main_app/templates/main_app/base.html
@@ -25,8 +25,10 @@
             <li>
               <form action="{% url 'logout' %}" method="post" style="display:inline;">
                  <li><a href="{% url 'labs_list' %}">View All labs</a></li>
+                 <li>
+                  <form action="{% url 'logout' %}" method="post" style="display:inline;">
                 {% csrf_token %}
-                <button type="submit">Logout</button>
+                <button type="submit" class="logout-btn">Logout</button>
               </form>
             </li>
           {% else %}
