--- a/main_app/templates/main_app/profile.html
+++ b/main_app/templates/main_app/profile.html
@@ -1,11 +1,8 @@
-{% extends 'main_app/base.html' %}
-{% load static %}
-
-{% block content %}
+{% extends 'main_app/base.html' %} {% block content %}
 <div class="container mt-5">
   <h2 class="mb-4">{{ user.username }}'s Profile</h2>
-  {% if profile.avatar %}
-    <img src="{% static profile.avatar|cut:'main_app/static/image/profiles' %}">
+  {% if profile.avatar %} {% load static %}
+  <img src="{% static profile.avatar|cut:'main_app/static/' %}" />
   {% endif %}
 
   <p class="mt-3"><strong>Bio:</strong> {{ profile.bio}}</p>
@@ -13,9 +10,7 @@
   <form method="POST" enctype="multipart/form-data" class="mt-4">
     {% csrf_token %}
 
-    <div class="mb-3">
-      {{ form.avatar }}
-    </div>
+    <div class="mb-3">{{ form.avatar }}</div>
 
     <div class="mb-3">
       <label for="id_bio" class="form-label">Bio:</label>
