profile edit is done

--- a/main_app/templates/main_app/profile_edit.html
+++ b/main_app/templates/main_app/profile_edit.html
@@ -2,7 +2,6 @@
 {% block content %}
 <div class="container mt-5">
   <h2 class="mb-4">Edit Profile</h2>
-  <form method="POST" enctype="multipart/form-data" class="mt-4"></form>
       {% csrf_token %}
    <div class="mb-3">
   <label for="id_avator" class="form-label">avatar:</label>
@@ -13,7 +12,7 @@
 {{ form.bio }}
 </div>
 <button type="submit" class="btn btn-primary">Update Profile</button>
-<a href="{% url 'profile' user.username %}"class="btn btn-seconday">Back</a>
+<a href="{% url 'profile' %}"class="btn btn-seconday">Back</a>
   </form>
 </div>
 {% endblock %}
