--- a/main_app/templates/main_app/profile.html
+++ b/main_app/templates/main_app/profile.html
@@ -6,18 +6,6 @@
   {% endif %}
 
   <p class="mt-3"><strong>Bio:</strong> {{ profile.bio}}</p>
-
-  <form method="POST" enctype="multipart/form-data" class="mt-4">
-    {% csrf_token %}
-
-    <div class="mb-3">{{ form.avatar }}</div>
-
-    <div class="mb-3">
-      <label for="id_bio" class="form-label">Bio:</label>
-      {{ form.bio }}
-    </div>
-
-    <button type="submit" class="btn btn-primary">Update Profile</button>
-  </form>
+  <a href="{% url 'edit-profile' %}" class="btn">Edit Profile</a>
 </div>
 {% endblock %}
