--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 * {
   margin: 0;
@@ -314,4 +314,4 @@ nav form {
   border: 1px solid #e0e6ef;
   box-shadow: 0 2px 10px rgba(0,0,0,0.05);
 }
-
+ */
