--- a/main_app/templates/main_app/base.html
+++ b/main_app/templates/main_app/base.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PhysiVerse</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
@@ -20,23 +19,20 @@
           </li>
         </ul>
         <ul class="right">
-          <li><a href="{% url 'about' %}">About</a></li>
-          {% if user.is_authenticated %}
-            <li>
-              <form action="{% url 'logout' %}" method="post" style="display:inline;">
-                 <li><a href="{% url 'labs_list' %}">View All labs</a></li>
-                 <li>
-                  <form action="{% url 'logout' %}" method="post" style="display:inline;">
-                {% csrf_token %}
-                <button type="submit" class="logout-btn">Logout</button>
-              </form>
-            </li>
-          {% else %}
-            <li><a href="{% url 'login' %}">Login</a></li>
-            <li><a href="{% url 'signup' %}">Signup</a></li>
-
-          {% endif %}
-        </ul>
+  <li><a href="{% url 'about' %}">About</a></li>
+  {% if user.is_authenticated %}
+    <li><a href="{% url 'labs_list' %}">All Labs</a></li>
+    <li>
+      <form action="{% url 'logout' %}" method="post">
+        {% csrf_token %}
+        <button type="submit">Logout</button>
+      </form>
+    </li>
+  {% else %}
+    <li><a href="{% url 'login' %}">Login</a></li>
+    <li><a href="{% url 'signup' %}">Signup</a></li>
+  {% endif %}
+</ul>
       </div>
     </nav>
   </header>
