--- a/main_app/templates/main_app/profile_edit.html
+++ b/main_app/templates/main_app/profile_edit.html
@@ -1,18 +1,22 @@
 {% extends 'main_app/base.html' %}
 {% block content %}
+
 <div class="container mt-5">
   <h2 class="mb-4">Edit Profile</h2>
+  {% load static %}
+  <form method="POST" enctype="multipart/form-data">
       {% csrf_token %}
-   <div class="mb-3">
-  <label for="id_avator" class="form-label">avatar:</label>
-  {{ form.avatar }}
-   </div>
-<div class="mb-3"></div>
-<label for="id_bio" class="form-label">Bio:</label>
-{{ form.bio }}
-</div>
-<button type="submit" class="btn btn-primary">Update Profile</button>
-<a href="{% url 'profile' %}"class="btn btn-seconday">Back</a>
+      <div class="mb-3">
+        <label for="id_avatar" class="form-label">Avatar:</label>
+        {{ form.avatar }}
+      </div>
+
+      <div class="mb-3">
+        <label for="id_bio" class="form-label">Bio:</label>
+        {{ form.bio }}
+      </div>
+
+      <button type="submit" class="btn btn-success">Update</button>
   </form>
 </div>
 {% endblock %}
