--- a/main_app/templates/main_app/base.html
+++ b/main_app/templates/main_app/base.html
@@ -22,6 +22,9 @@
   <li><a href="{% url 'about' %}">About</a></li>
   {% if user.is_authenticated %}
     <li><a href="{% url 'labs_list' %}">All Labs</a></li>
+    <li><a href="{% url 'profile' %}">Profile</a></li>
+    <br>
+    <br>
     <li>
       <form action="{% url 'logout' %}" method="post">
         {% csrf_token %}
