--- a/main_app/templates/main_app/profile_edit.html
+++ b/main_app/templates/main_app/profile_edit.html
@@ -1,18 +1,20 @@
 {% extends 'main_app/base.html' %}
 {% block content %}
-
+{% load static %}
 <div class="container mt-5">
   <h2 class="mb-4">Edit Profile</h2>
-  {% load static %}
+
   <form method="POST" enctype="multipart/form-data">
       {% csrf_token %}
       <div class="mb-3">
         <label for="id_avatar" class="form-label">Avatar:</label>
-        {{ form.avatar }}
+        <br>
+        <img src={% static profile.avatar|cut:'main_app/static' %} alt="">
       </div>
 
       <div class="mb-3">
         <label for="id_bio" class="form-label">Bio:</label>
+         <br>
         {{ form.bio }}
       </div>
 
