--- a/main_app/templates/main_app/profile_edit.html
+++ b/main_app/templates/main_app/profile_edit.html
@@ -9,7 +9,7 @@
       <div class="mb-3">
         <label for="id_avatar" class="form-label">Avatar:</label>
         <br>
-        <img src={% static profile.avatar|cut:'main_app/static' %} alt="">
+        <img src={% static profile.avatar|cut:'main_app/static' %} class="avatar" alt="">
       </div>
 
       <div class="mb-3">
