--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -322,3 +322,11 @@ button{
   text-decoration: underline;
   cursor: pointer;
 }
+
+.avatar {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid ;
+}
