Add a new credits

--- a/main_app/templates/main_app/experiment_detail.html
+++ b/main_app/templates/main_app/experiment_detail.html
@@ -70,7 +70,7 @@
   <div class="popup-content" onclick="event.stopPropagation()">
     <button class="popup-close" onclick="closePopup()">&times;</button>
     <h3>How to perform the experiment</h3>
-    <div style="margin-top: 15px; text-align: left;">
+<div style="margin-top: 15px; text-align: left; white-space: pre-line;">
       {{ experiment.procedure|safe }}
     </div>
   </div>
