--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -5,5 +5,8 @@
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Login</button>
+  <p>
+  <a href="{% url 'password_reset' %}">Forgot Password?</a>
+</p>
 </form>
 {% endblock %}
