Add btn back to labs

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -948,3 +948,8 @@ audio {
     grid-template-columns: 1fr;
   }
 }
+.back-btn {
+  border-radius: 6px !important; /* شكل مستطيل بزوايا خفيفة */
+  padding: 12px 25px;
+  font-size: 16px;
+}
