--- a/main_app/templates/main_app/lab_detail.html
+++ b/main_app/templates/main_app/lab_detail.html
@@ -30,5 +30,6 @@
       Add New Experiment
     </a>
   </div>
+  <a href="{% url 'labs_list' %}" class="btn back-btn">Back to Labs</a>
   {% endif %}
 {% endblock %}
